    it does not install headers and plasma-widgets-workspace is the only package
    which depends on it.
  * Use strict interdependencies between library packages and local binary
    packages which depend on them.
  * Use ${allLibraries} subst in kdebase-workspace-dev Depends.
  * Build depend on pkg-kde-tools 0.6.4 for library-packages.mk and enhanced
    symbol files support.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 15 Feb 2010 19:41:04 +0100

kdebase-workspace (4:4.3.4-4) unstable; urgency=low

  * Backport r1069849 in order to fix crash with hal 0.5.14 (yet another
    attempt). Merged into patch 90_work_with_hal_0.5.14_svn_r1062504.diff
    (Closes: #556468).

 -- Modestas Vainius <modax@debian.org>  Wed, 06 Jan 2010 20:11:33 +0200

kdebase-workspace (4:4.3.4-3) unstable; urgency=high

  * Backport parts of r1035622/r1057980 to fix
    90_work_with_hal_0.5.14_svn_r1062504.diff (Closes: #556468).

 -- Xavier Vello <xavier.vello@gmail.com>  Sat, 26 Dec 2009 17:22:05 +0100

kdebase-workspace (4:4.3.4-2) unstable; urgency=high

  [ Modestas Vainius ]
  * Change my email address to modax@debian.org in Uploaders field.
  * Fix Vcs-Browser URL.

  [ Xavier Vello ]
  * Import r1062504 patch to solid to make powerdevil applet work 
    with hal 0.5.14 (Closes: #561724)

  [ Sune Vuorela ]
  * Urgency=high because of frequent crash fix

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 23 Dec 2009 00:19:07 +0100

kdebase-workspace (4:4.3.4-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Lukasz Janyst:

  * Bump build depends.
  * Update patches/09_genkdm_make.diff - 1 line offset

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Remove myself from Uploaders.
  * Replace kcontrol -> System Settings in libkfontinst4 description.
  * Add a few missing end of line dots in descriptions.

  +++ Changes by Modestas Vainius:

  * Update install files.