@@ -1,0 +1,66 @@
+# SymbolsHelper-Confirmed: 4:4.4.0 amd64 i386
+libksignalplotter.so.4 libksignalplotter4 #MINVER#
+ _ZN14KSignalPlotter10paintEventEP11QPaintEvent@Base 4:4.4.0
+ _ZN14KSignalPlotter10removeBeamEi@Base 4:4.4.0
+ _ZN14KSignalPlotter11changeEventEP6QEvent@Base 4:4.4.0
+ _ZN14KSignalPlotter11changeRangeEdd@Base 4:4.4.0
+ _ZN14KSignalPlotter11qt_metacallEN11QMetaObject4CallEiPPv@Base 4:4.4.0
+ _ZN14KSignalPlotter11qt_metacastEPKc@Base 4:4.4.0
+ _ZN14KSignalPlotter11resizeEventEP12QResizeEvent@Base 4:4.4.0
+ _ZN14KSignalPlotter11setShowAxisEb@Base 4:4.4.0
+ _ZN14KSignalPlotter12reorderBeamsERK5QListIiE@Base 4:4.4.0
+ _ZN14KSignalPlotter12setBeamColorEiRK6QColor@Base 4:4.4.0
+ _ZN14KSignalPlotter13setStackGraphEb@Base 4:4.4.0
+ _ZN14KSignalPlotter14setFillOpacityEi@Base 4:4.4.0
+ _ZN14KSignalPlotter14setScaleDownByEd@Base 4:4.4.0
+ _ZN14KSignalPlotter14setSmoothGraphEb@Base 4:4.4.0
+ _ZN14KSignalPlotter15setMaximumValueEd@Base 4:4.4.0
+ _ZN14KSignalPlotter15setMinimumValueEd@Base 4:4.4.0
+ _ZN14KSignalPlotter15setUseAutoRangeEb@Base 4:4.4.0
+ _ZN14KSignalPlotter16axisScaleChangedEv@Base 4:4.4.0
+ _ZN14KSignalPlotter16setSvgBackgroundERK7QString@Base 4:4.4.0
+ _ZN14KSignalPlotter16staticMetaObjectE@Base 4:4.4.0
+ _ZN14KSignalPlotter18setHorizontalScaleEj@Base 4:4.4.0
+ _ZN14KSignalPlotter19setMaxAxisTextWidthEi@Base 4:4.4.0
+ _ZN14KSignalPlotter20setShowVerticalLinesEb@Base 4:4.4.0
+ _ZN14KSignalPlotter22setShowHorizontalLinesEb@Base 4:4.4.0
+ _ZN14KSignalPlotter22setVerticalLinesScrollEb@Base 4:4.4.0
+ _ZN14KSignalPlotter24setVerticalLinesDistanceEj@Base 4:4.4.0
+ _ZN14KSignalPlotter7addBeamERK6QColor@Base 4:4.4.0
+ _ZN14KSignalPlotter7setUnitERK16KLocalizedString@Base 4:4.4.0
+ _ZN14KSignalPlotter9addSampleERK5QListIdE@Base 4:4.4.0
+ _ZN14KSignalPlotterC1EP7QWidget@Base 4:4.4.0
+ _ZN14KSignalPlotterC2EP7QWidget@Base 4:4.4.0
+ _ZN14KSignalPlotterD0Ev@Base 4:4.4.0
+ _ZN14KSignalPlotterD1Ev@Base 4:4.4.0
+ _ZN14KSignalPlotterD2Ev@Base 4:4.4.0
+ _ZNK14KSignalPlotter10metaObjectEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter10stackGraphEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter11fillOpacityEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter11scaleDownByEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter11smoothGraphEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter12maximumValueEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter12minimumValueEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter12useAutoRangeEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter13svgBackgroundEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter13valueAsStringEdi@Base 4:4.4.0
+ _ZNK14KSignalPlotter15horizontalScaleEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter16maxAxisTextWidthEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter17lastValueAsStringEii@Base 4:4.4.0
+ _ZNK14KSignalPlotter17showVerticalLinesEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter19showHorizontalLinesEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter19verticalLinesScrollEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter20currentAxisPrecisionEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter21verticalLinesDistanceEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter24currentMaximumRangeValueEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter24currentMinimumRangeValueEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter4unitEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter8numBeamsEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter8showAxisEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter8sizeHintEv@Base 4:4.4.0
+ _ZNK14KSignalPlotter9beamColorEi@Base 4:4.4.0
+ _ZNK14KSignalPlotter9lastValueEi@Base 4:4.4.0
+ _ZTI14KSignalPlotter@Base 4:4.4.0
+ _ZTS14KSignalPlotter@Base 4:4.4.0
+ _ZTV14KSignalPlotter@Base 4:4.4.0
+ (c++)"non-virtual thunk to KSignalPlotter::~KSignalPlotter()@Base" 4:4.4.0
