@@ -2,6 +2,7 @@
 
 DEB_ALL_LIBRARIES_SUBST_PACKAGES = kdebase-workspace-dev
 DEB_STRICT_LOCAL_SHLIBS_PACKAGES = $(DEB_LIBRARY_PACKAGES)
+BINARYVERSION := $(shell dpkg-parsechangelog | grep '^Version: ' | sed 's/^Version: //')
 
 include /usr/share/pkg-kde-tools/qt-kde-team/1/debian-qt-kde.mk
 include /usr/share/pkg-kde-tools/qt-kde-team/1/library-packages.mk
@@ -10,7 +11,10 @@ include /usr/share/pkg-kde-tools/qt-kde-team/1/library-packages.mk
 #	-DINSTALL_PRINTER_APPLET=TRUE
 
 DEB_CMAKE_EXTRA_FLAGS += -DKDE4_KDM_PAM_SERVICE=kdm
-DEB_DH_MAKESHLIBS_ARGS_ALL := -V
+DEB_DH_MAKESHLIBS_ARGS_ALL := -V -u-c0
+
+# Private shared libraries which do not install headers
+DEB_DH_MAKESHLIBS_ARGS_libplasmagenericshell4 := '-Vlibplasmagenericshell4 (= $(BINARYVERSION))'
 
 DEB_DH_SHLIBDEPS_ARGS_kdebase-workspace-bin := -- -xksysguard
 DEB_DH_SHLIBDEPS_ARGS_kdebase-workspace-dev := -- -xkdebase-runtime
